Fix single column width on small screens
(jk, THIS is my last commit. see ya!)

--- a/src/components/About/style.scss
+++ b/src/components/About/style.scss
@@ -95,6 +95,10 @@
     .single-column {
       margin-left: 0;
       max-width: 15rem;
+
+      @media (max-width: 711px) {
+        max-width: 100%;
+      }
     }
   }
 
